# zero2prod

./: Cargo.toml  Dockerfile
.github/workflows/: general.yml
src/: configuration.rs  lib.rs  main.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
