[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
serde = {version = "1.0.174", features = ["derive"]}
tokio = {version = "1.29.1", features = ["macros", "rt-multi-thread"]}
uuid = { version = "1.4.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]
reqwest = "0.11.18"
