[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
config = { version = "0.13.3", default-features = false, features = ["yaml"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = {version = "1.0.174", features = ["derive"]}
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio-native-tls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = {version = "1.29.1", features = ["macros", "rt-multi-thread"]}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
tracing-actix-web = "0.7.5"
uuid = { version = "1.4.1", features = ["v4"] }


[dev-dependencies]
reqwest = "0.11.18"
once_cell = "1.18.0"
